# advent-of-code

./: .gitignore  README.md  aoc.code-workspace
2020/ruby/: README.md
2020/ruby/day-10-adapter-array/: part_one.rb
2020/ruby/day-3-toboggan-trajectory/: part_one.rb
2020/ruby/day-4-passport-processing/: part_two.rb
2020/ruby/day-5-binary-boarding/: part_two.rb
2020/ruby/day-6-custom-customs/: part_one.rb
2020/ruby/day-7-handy-haversacks/: part_one.rb
2020/ruby/day-8-handheld-halting/: part_one.rb
2020/ruby/day-9-encoding-error/: part_one.rb
2021/: README.md  REAME.md
2021/elixir/: test_template.exs
2021/elixir/day-1-sonar-sweep/: part_one.ex  part_two.ex  sonar_sweep.ex  sonar_sweep_test.exs
2021/elixir/day-2-dive!/: dive.ex  dive_test.ex  dive_test.exs  part_one.ex  part_two.ex
2021/elixir/day-3-binary-diagnostic/: binary_diagnostic.ex  binary_diagnostic_test.exs  binary_diagonstic_test.exs
2021/rust/: .gitignore
2021/rust/day-1-sonar-sweep/: Cargo.toml
2022/: README.md
2023/day-1-trebuchet/: .gitignore
2023/day-1-trebuchet/cpp/: .gitignore  CMakeLists.txt  README.md  build.zig  day_one.cc  day_one.h  day_one_test.cc  main.cc
2023/day-1-trebuchet/cpp/src/: main.cpp
day-1-report-repair/: part_one.rb  part_two.rb
day-2-password-philosophy/: part_one.rb  part_two.rb
day-3-toboggan-trajectory/: part_two.rb
day-4-passport-processing/: part_one.rb
day-5-binary-boarding/: part_one.rb
day-6-custom-customs/: part_two.rb
day-7-handy-haversacks/: part_two.rb
day-8-handheld-halting/: part_two.rb
day-9-encoding-error/: part_two.rb
(+78 files in other folders)
